[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Shaders/outline.shader" type="Shader" id=1]
[ext_resource path="res://src/effects/FireEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/named/camp_fire.png" type="Texture" id=3]
[ext_resource path="res://assets/Particles/light.png" type="Texture" id=4]
[ext_resource path="res://src/fire/CircleFire.gd" type="Script" id=5]
[ext_resource path="res://src/fire/CircleTreeDetector.gd" type="Script" id=6]
[ext_resource path="res://src/delegates/Interactable.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/enabled = false
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="CircleFire" instance=ExtResource( 7 )]
script = ExtResource( 5 )

[node name="ClickShape" type="CollisionShape2D" parent="." index="0"]
shape = SubResource( 4 )

[node name="FireSprite" type="Sprite" parent="." index="2"]
material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="FireEffect" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( 0, 2 )
scale = Vector2( 2, 2 )

[node name="Light2D" type="Light2D" parent="." index="4"]
texture = ExtResource( 4 )
texture_scale = 0.1
color = Color( 1, 0.882353, 0.796078, 1 )
mode = 2

[node name="PlayerEnteredDetector" type="Area2D" parent="." index="5"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnteredDetector" index="0"]
shape = SubResource( 2 )

[node name="PlayerExitedDetector" type="Area2D" parent="." index="6"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerExitedDetector" index="0"]
shape = SubResource( 2 )

[node name="TreeDetector" type="Area2D" parent="." index="7"]
collision_layer = 0
collision_mask = 512
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeDetector" index="0"]
visible = false
shape = SubResource( 3 )

[connection signal="clicked" from="." to="." method="_on_CircleFire_clicked"]
[connection signal="state_changed" from="." to="." method="_on_CircleFire_state_changed"]
[connection signal="body_entered" from="PlayerEnteredDetector" to="." method="_on_PlayerEnteredDetector_body_entered"]
[connection signal="body_exited" from="PlayerExitedDetector" to="." method="_on_PlayerExitedDetector_body_exited"]
[connection signal="area_entered" from="TreeDetector" to="TreeDetector" method="_on_TreeDetector_area_entered"]
